# quotes-rocket-rust-server

./: Cargo.toml  Rocket.toml  docker-compose.yml
migrations/2023-05-22-224346_create_quotes/: up.sql
migrations/2023-05-24-200900_insert_quotes/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs  seed_data.rs
