[package]
name = "basic-rocket-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
diesel_cli = { version = "2.0.1", default-features = false, features = ["postgres"] }
rand = "0.8.5"
serde = "1.0.163"
dotenvy = "0.15.7"
